--- a/i2c/ToDo.txt
+++ b/i2c/ToDo.txt
@@ -7,6 +7,7 @@ To do:
   * #define common display commands.
   * write_line command.
   * read_line command?
+  * left, center, right
 
 * I2C
   * Verify send/receive algorithms (both books).
