Added LED blink task; combined I2C write/read task.

--- a/i2c/ToDo.txt
+++ b/i2c/ToDo.txt
@@ -13,13 +13,6 @@ To do:
 * I2C
   * Verify send/receive algorithms (both books).
   * Long jump to exception/ISR?
-  * send/receive tasks.
+  * send/receive task.
     * Queues?
-  * Send header
-    * address
-    * length
-    * data
-  * Recieve header
-    * address
-    * length
-    * pointer to buffer
+
